cabal-version:   2.2
name:            base64-bytes
version:         0.1.1.1
synopsis:        Base64 encoding of byte sequences
description:     Base64 encoding of byte sequences.
homepage:        https://github.com/byteverse/base64-bytes
bug-reports:     https://github.com/byteverse/base64-bytes/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Andrew Martin
maintainer:      amartin@layer3com.com
copyright:       2019 Andrew Martin
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

library
  import:          build-settings
  exposed-modules:
    Data.Bytes.Base64
    Data.Bytes.Base64.Url

  build-depends:
    , base                >=4.12  && <5
    , byte-order          >=0.1.1 && <0.2
    , bytebuild           >=0.3.4 && <0.4
    , byteslice           >=0.1.4 && <0.3
    , natural-arithmetic  >=0.1.1 && <0.3
    , primitive           >=0.7   && <0.10
    , run-st              >=0.1   && <0.2
    , word-compat         >=0.0.4 && <0.1

  hs-source-dirs:  src
  ghc-options:     -O2

test-suite test
  import:         build-settings
  hs-source-dirs: test
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  build-depends:
    , base
    , base64-bytes
    , bytebuild
    , byteslice           >=0.1.4.0
    , natural-arithmetic  >=0.1.1
    , primitive

benchmark bench
  import:         build-settings
  type:           exitcode-stdio-1.0
  build-depends:
    , base
    , base64             >=0.3
    , base64-bytes
    , base64-bytestring
    , byteslice
    , bytestring
    , gauge
    , primitive
    , random             >=1.1

  ghc-options:    -O2
  hs-source-dirs: bench
  main-is:        Main.hs

source-repository head
  type:     git
  location: git://github.com/byteverse/base64-bytes.git
